Implementos no CSS

--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <
+    <meta lang="pt" />
     <link rel="stylesheet" href="style.css" />
     <title>Matheus L Soares - DoWhile 2021</title>
   </head>
@@ -17,6 +17,27 @@
         <a href="https://www.instagram.com/matheusl.soares/"
           >@matheus.lsoares</a
         >
+
+        <p>Web Dev decolando para o próximo nivel!</p>
+
+        <ul>
+          <li>
+            <a href="https://www.facebook.com/theeusleite/"
+              ><img
+                src="images/facebook.svg"
+                alt="icone facebook"
+                target="_blank"
+            /></a>
+          </li>
+          <li>
+            <a href="https://www.instagram.com/matheusl.soares/"
+              ><img
+                src="images/instagram.svg"
+                alt="icone instagram"
+                target="_blank"
+            /></a>
+          </li>
+        </ul>
       </div>
     </main>
   </body>
