--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   </head>
   <body>
     <main>
-      <div class="content">
+      <div class="container">
         <div class="avatar">
           <img src="images/build.svg" alt="selo rocketseat" />
           <img src="http://lorempixel.com/185/185/people/" alt="foto pessoal" />
