:sparkles: added personal image

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
       <div class="container">
         <div class="avatar">
           <img src="images/build.svg" alt="selo rocketseat" />
-          <img src="http://lorempixel.com/185/185/people/" alt="foto pessoal" />
+          <img src="images/me.jpg" width="185px" alt="foto pessoal" />
         </div>
 
         <h1>Matheus L. Soares</h1>
@@ -22,19 +22,13 @@
 
         <ul>
           <li>
-            <a href="https://www.facebook.com/theeusleite/"
-              ><img
-                src="images/facebook.svg"
-                alt="icone facebook"
-                target="_blank"
+            <a href="https://www.facebook.com/theeusleite/" target="_blank"
+              ><img src="images/facebook.svg" alt="icone facebook"
             /></a>
           </li>
           <li>
-            <a href="https://www.instagram.com/matheusl.soares/"
-              ><img
-                src="images/instagram.svg"
-                alt="icone instagram"
-                target="_blank"
+            <a href="https://www.instagram.com/matheusl.soares/" target="_blank"
+              ><img src="images/instagram.svg" alt="icone instagram"
             /></a>
           </li>
         </ul>
