--- a/index.html
+++ b/index.html
@@ -2,6 +2,13 @@
 <html>
   <head>
     <meta lang="pt" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap"
+      rel="stylesheet"
+    />
+
     <link rel="stylesheet" href="style.css" />
     <title>Matheus L Soares - DoWhile 2021</title>
   </head>
@@ -9,8 +16,16 @@
     <main>
       <div class="container">
         <div class="avatar">
-          <img src="images/build.svg" alt="selo rocketseat" />
-          <img src="images/me.jpg" width="185px" alt="foto pessoal" />
+          <span>
+            <img src="images/build.svg" alt="selo rocketseat" />
+          </span>
+
+          <img
+            src="images/me.jpg"
+            alt="foto pessoal"
+            width="185px"
+            height="185px"
+          />
         </div>
 
         <h1>Matheus L. Soares</h1>
