:wrench: improved CSS features

--- a/index.html
+++ b/index.html
@@ -29,8 +29,9 @@
         </div>
 
         <h1>Matheus L. Soares</h1>
-        <a href="https://www.instagram.com/matheusl.soares/"
-          >@matheus.lsoares</a
+        <a href="https://github.com/MatheusLSoares"
+          ><img src="images/github-icon.svg" alt="selo github" />
+          MatheusLSoares</a
         >
 
         <p>Web Dev decolando para o próximo nivel!</p>
